[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Objects/DoorVertical.gd" type="Script" id=1]
[ext_resource path="res://Grafiikka/Kartta/Ovet/ovikiinni_pysty_vasen.png" type="Texture" id=2]
[ext_resource path="res://Grafiikka/Kartta/Ovet/ovipalikka_psyty.png" type="Texture" id=3]
[ext_resource path="res://Grafiikka/Kartta/Ovet/ovikiinni_pysty_oikea.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 71.413
height = 71.8155

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 143.156, 15 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 139.752, -98.136, 187.752, -98.136, 187.752, 45.864, 139.752, 45.864 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 147.391, 85.7614, 195.391, 85.7614, 195.391, -18.2386, 147.391, -18.2386 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( 64, -24, 112, -24, 112, 96, 64, 96 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 143.156, 7.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 143.156, 12 )

[node name="DoorObjectHorizontal" type="Sprite"]
z_index = 6
texture = ExtResource( 3 )
script = ExtResource( 1 )

[node name="DoorOikea" type="Sprite" parent="."]
position = Vector2( 28.5402, -52.2286 )
z_index = 4
texture = ExtResource( 4 )
centered = false
offset = Vector2( 0, -30 )

[node name="DoorVasen" type="Sprite" parent="."]
position = Vector2( -53.4063, -23.4343 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3.02109, -28.0714 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="OviSB" type="StaticBody2D" parent="."]
position = Vector2( -85.167, 27.8498 )
scale = Vector2( 0.502947, 5.33333 )

[node name="ovi" type="CollisionShape2D" parent="OviSB"]
position = Vector2( 169.336, -8.22184 )
shape = SubResource( 2 )

[node name="oikea_reauna_varjo" type="LightOccluder2D" parent="."]
position = Vector2( -163.752, -125.864 )
occluder = SubResource( 3 )

[node name="vasen_reuna_varjo" type="LightOccluder2D" parent="."]
position = Vector2( -171.391, 58.2386 )
occluder = SubResource( 4 )

[node name="ovi_varjo" type="LightOccluder2D" parent="."]
position = Vector2( -88, -56 )
occluder = SubResource( 5 )

[node name="ReunatSB" type="StaticBody2D" parent="."]
position = Vector2( -84.8527, 26.5165 )

[node name="oikea_reuna" type="CollisionShape2D" parent="ReunatSB"]
position = Vector2( 84.8527, 77.4835 )
scale = Vector2( 0.502947, 5.33333 )
shape = SubResource( 6 )

[node name="vasen_reuna" type="CollisionShape2D" parent="ReunatSB"]
position = Vector2( 84.8527, -186.517 )
scale = Vector2( 0.502947, 5.33333 )
shape = SubResource( 7 )
